--- a/extensions/workmanager/build.gradle
+++ b/extensions/workmanager/build.gradle
@@ -31,3 +31,4 @@ ext {
     releaseDescription = 'WorkManager extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
