Add publish gradle tasks for maven central

--- a/extensions/cast/build.gradle
+++ b/extensions/cast/build.gradle
@@ -51,3 +51,4 @@ ext {
     releaseDescription = 'Cast extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
