--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath 'com.novoda:bintray-release:0.9.1'
         classpath 'com.google.android.gms:strict-version-matcher-plugin:1.2.0'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
     }
 }
 allprojects {
@@ -40,3 +41,4 @@ allprojects {
 }
 
 apply from: 'javadoc_combined.gradle'
+apply plugin: 'io.codearte.nexus-staging'
