--- a/extensions/av1/build.gradle
+++ b/extensions/av1/build.gradle
@@ -71,3 +71,9 @@ ext {
     javadocTitle = 'AV1 extension'
 }
 apply from: '../../javadoc_library.gradle'
+
+ext {
+    releaseArtifact = 'extension-av1'
+    releaseDescription = 'AV1 extension for ExoPlayer.'
+}
+apply from: '../../publish-mavencentral.gradle'
