--- a/extensions/cronet/build.gradle
+++ b/extensions/cronet/build.gradle
@@ -50,3 +50,4 @@ ext {
     releaseDescription = 'Cronet extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
