--- a/extensions/ffmpeg/build.gradle
+++ b/extensions/ffmpeg/build.gradle
@@ -48,3 +48,9 @@ ext {
     javadocTitle = 'FFmpeg extension'
 }
 apply from: '../../javadoc_library.gradle'
+
+ext {
+    releaseArtifact = 'extension-ffmpeg'
+    releaseDescription = 'FFMPEG extension for ExoPlayer.'
+}
+apply from: '../../publish-mavencentral.gradle'
