--- a/extensions/leanback/build.gradle
+++ b/extensions/leanback/build.gradle
@@ -46,3 +46,4 @@ ext {
     releaseDescription = 'Leanback extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
