--- a/extensions/okhttp/build.gradle
+++ b/extensions/okhttp/build.gradle
@@ -54,3 +54,4 @@ ext {
     releaseDescription = 'OkHttp extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
