--- a/extensions/rtmp/build.gradle
+++ b/extensions/rtmp/build.gradle
@@ -48,3 +48,4 @@ ext {
     releaseDescription = 'RTMP extension for ExoPlayer.'
 }
 apply from: '../../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
