--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -58,3 +58,4 @@ ext {
     releaseDescription = 'Test utils for ExoPlayer.'
 }
 apply from: '../publish.gradle'
+apply from: '../publish-mavencentral.gradle'
