--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -30,6 +30,7 @@ ext["sonatypeStagingProfileId"] = System.getenv('SONATYPE_STAGING_PROFILE_ID')
 ext["buildNumber"] = System.getenv('BUILD_NUMBER')
 
 nexusStaging {
+    serverUrl = 'https://s01.oss.sonatype.org/service/local/'
     packageGroup = publishGroupId
     stagingProfileId = sonatypeStagingProfileId
     username = ossrhUsername
@@ -84,8 +85,8 @@ publishing {
         maven {
             name = "sonatype"
 
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
             credentials {
