Fix dependencies group id for publishing public library

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ allprojects {
         }
         buildDir = "${externalBuildDir}/${project.name}"
     }
-    group = 'com.google.android.exoplayer'
+    group = 'com.github.harmonicinc-com'
 }
 
 apply from: 'javadoc_combined.gradle'
