--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -15,7 +15,6 @@ ext["signing.password"] = ''
 ext["signing.secretKeyRingFile"] = ''
 ext["ossrhUsername"] = ''
 ext["ossrhPassword"] = ''
-ext["publishGroupId"] = ''
 ext["sonatypeStagingProfileId"] = ''
 ext["buildNumber"] = ''
 
@@ -25,13 +24,12 @@ ext["signing.password"] = System.getenv('SIGNING_PASSWORD')
 ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_SECRET_KEY_RING_FILE')
 ext["ossrhUsername"] = System.getenv('OSSRH_USERNAME')
 ext["ossrhPassword"] = System.getenv('OSSRH_PASSWORD')
-ext["publishGroupId"] = System.getenv('PUBLISH_GROUP_ID')
 ext["sonatypeStagingProfileId"] = System.getenv('SONATYPE_STAGING_PROFILE_ID')
 ext["buildNumber"] = System.getenv('BUILD_NUMBER')
 
 nexusStaging {
     serverUrl = 'https://s01.oss.sonatype.org/service/local/'
-    packageGroup = publishGroupId
+    packageGroup = 'com.github.harmonicinc-com'
     stagingProfileId = sonatypeStagingProfileId
     username = ossrhUsername
     password = ossrhPassword
@@ -40,7 +38,7 @@ nexusStaging {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId publishGroupId
+            groupId 'com.github.harmonicinc-com'
             artifactId releaseArtifact
             version "$releaseVersion.$buildNumber"
             artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
@@ -73,9 +71,11 @@ publishing {
 
                     project.configurations.implementation.allDependencies.each {
                         def dependencyNode = dependenciesNode.appendNode('dependency')
+                        def patchedArtifactId = it.name.replace("library", "exoplayer").replace("testutils", "exoplayer-testutils")
+
                         dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
+                        dependencyNode.appendNode('artifactId', it.group.contentEquals("com.github.harmonicinc-com")?patchedArtifactId:it.name)
+                        dependencyNode.appendNode('version', it.group.contentEquals("com.github.harmonicinc-com")?"$releaseVersion.$buildNumber":it.version)
                     }
                 }
             }
