--- a/common_library_config.gradle
+++ b/common_library_config.gradle
@@ -31,4 +31,9 @@ android {
     }
 
     testOptions.unitTests.includeAndroidResources = true
+    testOptions {
+        unitTests.all {
+            systemProperty 'robolectric.enabledSdks', '28'
+        }
+    }
 }
