--- a/robolectricutils/build.gradle
+++ b/robolectricutils/build.gradle
@@ -33,3 +33,4 @@ ext {
     releaseDescription = 'Robolectric utils for ExoPlayer.'
 }
 apply from: '../publish.gradle'
+apply from: '../../publish-mavencentral.gradle'
